logs/tensorport.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/click_log'...
Listing './lib/python3.5/site-packages/click_log-0.1.8.dist-info'...
Listing './lib/python3.5/site-packages/coreapi'...
Listing './lib/python3.5/site-packages/coreapi/codecs'...
Listing './lib/python3.5/site-packages/coreapi/transports'...
Listing './lib/python3.5/site-packages/coreapi-2.3.3.dist-info'...
Listing './lib/python3.5/site-packages/coreapi_cli'...
Listing './lib/python3.5/site-packages/coreapi_cli-1.0.6.egg-info'...
Listing './lib/python3.5/site-packages/coreschema'...
Listing './lib/python3.5/site-packages/coreschema/encodings'...
Listing './lib/python3.5/site-packages/coreschema/templates'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3'...
Listing './lib/python3.5/site-packages/coreschema/templates/bootstrap3/inputs'...
Listing './lib/python3.5/site-packages/coreschema-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itypes-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/tensorport-1.5.5.egg-info'...
Listing './lib/python3.5/site-packages/terminaltables'...
Listing './lib/python3.5/site-packages/terminaltables-3.1.0.egg-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './share'...
Listing './share/python-wheels'...
